<resources>
    <string name="app_name">点菜宝</string>
    <string name="app_version_name">版本: v</string>
    <string name="app_text_register">注册</string>
    <string name="app_text_login">登录</string>
    <string name="register_account">注册账户</string>
    <string name="forget_password">忘记密码?</string>
    <string name="input_password">请输入密码</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_email">请输入邮箱</string>
    <string name="reclick_to_exit">再按一次退出点菜宝</string>
    <string name="feedback">意见反馈</string>
    <string name="submit">提交</string>
    <string name="choose_feedback_type">选择反馈类型:</string>
    <string name="product_suggestion">产品建议</string>
    <string name="program_bug">程序错误</string>
    <string name="other">其他反馈</string>
    <string name="feedback_content_hint">请输入反馈，我们将为你不断改进</string>
    <string name="fillin_your_email">填写你的邮箱</string>
    <string name="common_problem">常见问题:</string>
    <string name="about_app">关于点菜宝</string>
    <string name="current_version">当前版本</string>
    <string name="latest_version">最新版本</string>
    <string name="no_new_version">无新版</string>
    <string name="tutorial">新手教程</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="rating">给软件评分</string>
    <string name="about_description">使用点菜宝网页版，电脑客户端，手机客户端，强大的多端同步，音乐随身听！请访问：blog.54yongf.com</string>
    <string name="rules">《<u>点菜宝管理细则</u>》</string>
    <string name="terms">《<u>点菜宝服务条款</u>》</string>
    <string name="setting">设置</string>
    <string name="scan">扫一扫</string>
    <string name="my_message">我的消息</string>
    <string name="skin_theme">主题换肤</string>
    <string name="big_fish">大鱼海棠</string>
    <string name="night_mode">夜间模式</string>
    <string name="alarm_clock">音乐闹钟</string>
    <string name="share_diancaibao">分享点菜宝</string>
    <string name="about">关于</string>
    <string name="log_out">退出登录</string>
    <string name="goback">返回</string>
    <string name="back_to_login_page">返回登录页面</string>
    <string name="fragment_main_coupon_original_price">￥100</string>
    <string name="fragment_main_coupon_activity_desc">1、代金券仅限堂食使用，恕不兑换现金，不设找零，不提供发票。\n2、购买的代金券请在有效期内使用。\n3、代金券仅限上海店使用。\n4、细则解释权归"美味宝"所有。\n5、代金券详情说明，请点击代金券查看。</string>

    <!--<string name="fragment_main_coupon_original_price"><![CDATA[<s>￥100</s>]]></string>-->
</resources>
