<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Toolbar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_width="@dimen/app_size90"
        android:layout_height="@dimen/app_size90"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/app_size30"
        android:src="@drawable/playstore_icon" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_size45"
        android:layout_marginLeft="@dimen/app_size16"
        android:layout_marginRight="@dimen/app_size16"
        android:layout_marginTop="@dimen/app_size30"
        android:background="@drawable/bg_edittext"
        android:hint="@string/input_username"
        android:padding="@dimen/app_size10"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_size45"
        android:layout_marginLeft="@dimen/app_size16"
        android:layout_marginRight="@dimen/app_size16"
        android:layout_marginTop="@dimen/app_size15"
        android:background="@drawable/bg_edittext"
        android:hint="@string/input_email"
        android:padding="@dimen/app_size10"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_size45"
        android:layout_marginLeft="@dimen/app_size16"
        android:layout_marginRight="@dimen/app_size16"
        android:layout_marginTop="@dimen/app_size15"
        android:background="@drawable/bg_edittext"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:padding="@dimen/app_size10"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_size50"
        android:layout_marginLeft="@dimen/app_size16"
        android:layout_marginRight="@dimen/app_size16"
        android:layout_marginTop="@dimen/app_size15"
        android:background="@color/app_color_login_blue"
        android:text="@string/app_text_register"
        android:textColor="@color/app_color_white"
        android:textSize="@dimen/app_txt_size18" />
</LinearLayout>
