<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_color_white_smoke">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.yongf.rorder.widget.TitleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rightVisible="false"
            app:titleText="@string/about_app" />

        <ImageView
            android:layout_width="@dimen/app_size70"
            android:layout_height="@dimen/app_size70"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/app_size30"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_size30"
            android:background="@color/app_color_white"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_size0.5"
                android:background="@color/app_color_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/app_size13"
                    android:text="@string/current_version"
                    android:textColor="@color/app_color_black"
                    android:textSize="@dimen/app_txt_size17" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/app_size13"
                    android:text="3.7.5"
                    android:textColor="@color/app_color_gray"
                    android:textSize="@dimen/app_size15" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_size0.5"
                android:background="@color/app_color_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/app_size13"
                    android:text="@string/latest_version"
                    android:textColor="@color/app_color_black"
                    android:textSize="@dimen/app_txt_size17" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/app_size13"
                    android:text="@string/no_new_version"
                    android:textColor="@color/app_color_gray"
                    android:textSize="@dimen/app_size15" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_size0.5"
                android:background="@color/app_color_divider" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_size10"
            android:background="@color/app_color_white"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_size0.5"
                android:background="@color/app_color_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/app_size13"
                    android:text="@string/tutorial"
                    android:textColor="@color/app_color_black"
                    android:textSize="@dimen/app_txt_size17" />

                <ImageView
                    android:layout_width="@dimen/app_size25"
                    android:layout_height="@dimen/app_size25"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/app_size8"
                    android:src="@drawable/more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_size0.5"
                android:background="@color/app_color_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/app_size13"
                    android:text="@string/help_and_feedback"
                    android:textColor="@color/app_color_black"
                    android:textSize="@dimen/app_txt_size17" />

                <ImageView
                    android:layout_width="@dimen/app_size25"
                    android:layout_height="@dimen/app_size25"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/app_size8"
                    android:src="@drawable/more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_size0.5"
                android:background="@color/app_color_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/app_size13"
                    android:text="@string/rating"
                    android:textColor="@color/app_color_black"
                    android:textSize="@dimen/app_txt_size17" />

                <ImageView
                    android:layout_width="@dimen/app_size25"
                    android:layout_height="@dimen/app_size25"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/app_size8"
                    android:src="@drawable/more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_size0.5"
                android:background="@color/app_color_divider" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/app_size15"
            android:layout_marginRight="@dimen/app_size15"
            android:layout_marginTop="@dimen/app_size8"
            android:gravity="center"
            android:text="@string/about_description"
            android:textColor="@color/app_color_gray"
            android:textSize="@dimen/app_txt_size12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/app_size40"
            android:text="@string/terms"
            android:textColor="@color/app_color_dark_sea_green"
            android:textSize="@dimen/app_txt_size14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/app_size10"
            android:text="@string/rules"
            android:textColor="@color/app_color_dark_sea_green"
            android:textSize="@dimen/app_txt_size14" />
    </LinearLayout>
</ScrollView>
